--- a/git1.html
+++ b/git1.html
@@ -15,6 +15,8 @@
         <p>git status(检查当前文件夹里面文件的状态)。然后git add 要管理的文件名称 （git add . 添加管理所有文件） </p>
         <p>提交版本git commit -m "自定义名字"。之后重新执行git status 会变绿new file。
             修改后执行git status又会显示红色modified。此时需要重新提交</p>
+        <p>git log (查看提交的所有版本) </p>
+        <p>回滚 ：git reset --hard (commit 代码号)</p>
     </div>
     <div>3.管理</div>
 </body>
