第一次提交分支

--- a/git1.html
+++ b/git1.html
@@ -17,8 +17,13 @@
             修改后执行git status又会显示红色modified。此时需要重新提交</p>
         <p>git log (查看提交的所有版本) </p>
         <p>回滚 ：git reset --hard (commit 代码号)</p>
+        <p>重新回滚：git reset --hard 6beef98</p>
+        <p>回到为暂存的状态（git add ）git reset HEAD (文件名)</p>
+        <p> git checkout -- (文件名) 再回到上一级状态</p>
     </div>
     <div>3.管理</div>
+    <div>1.branch分支管理 git branch 查看当前所处分支，git branch xxx 新建分支</div>
+    <div>git checkout xxx 切换到该分支 </div>
 </body>
 
 </html>
