二次提交分支

--- a/git1.html
+++ b/git1.html
@@ -23,7 +23,7 @@
     </div>
     <div>3.管理</div>
     <div>1.branch分支管理 git branch 查看当前所处分支，git branch xxx 新建分支</div>
-    <div>git checkout xxx 切换到该分支 </div>
+    <div>git checkout xxx 切换到该分支 分离每个分支的内容</div>
 </body>
 
 </html>
