--- a/git1.html
+++ b/git1.html
@@ -24,6 +24,10 @@
     <div>3.管理</div>
     <div>1.branch分支管理 git branch 查看当前所处分支，git branch xxx 新建分支</div>
     <div>git checkout xxx 切换到该分支 分离每个分支的内容</div>
+    <div>先切换到master分支 执行 git merge xxx 合并代码 然后 git branch -d xxx删除无用分支</div>
+    <p>代码推送到github:git remote add origin https://github.com/lgy12345/gitExE.git
+        git branch -M main
+        git push -u origin main</p>
 </body>
 
 </html>
