新分支提交

--- a/git1.html
+++ b/git1.html
@@ -25,9 +25,14 @@
     <div>1.branch分支管理 git branch 查看当前所处分支，git branch xxx 新建分支</div>
     <div>git checkout xxx 切换到该分支 分离每个分支的内容</div>
     <div>先切换到master分支 执行 git merge xxx 合并代码 然后 git branch -d xxx删除无用分支</div>
-    <p>代码推送到github:git remote add origin https://github.com/lgy12345/gitExE.git
-        git branch -M main
-        git push -u origin main</p>
+    <p>
+    <p>执行推送项目之前先：git remote set-url origin
+        https://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@github.com/lgy12345/gitExE.git</p>
+    git branch -M main
+    git push -u origin master</p>
+
+    <div>lgy新功能分支</div>
+
 </body>
 
 </html>
