--- a/git1.html
+++ b/git1.html
@@ -28,10 +28,10 @@
     <p>
     <p>执行推送项目之前先：git remote set-url origin
         https://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@github.com/lgy12345/gitExE.git</p>
-    git branch -M main
+    git branch -M master
     git push -u origin master</p>
 
-    <div>lgy新功能分支</div>
+    <div>lgy新功能分支1234</div>
 
 </body>
 
