--- a/git1.html
+++ b/git1.html
@@ -32,6 +32,8 @@
     git push -u origin master</p>
 
     <div>lgy新功能分支1234</div>
+    <p>第一次执行 git clone 远程仓库地址，只显示一个分支，</p>
+    <p>后续更新执行拉代码：git pull origin xxx(分支名称)</p>
 
 </body>
 
